[package]
name = "xeoverse-rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-web-actors = "4.2.0"
actix = "0.13.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rand = "0.8.5"
once_cell = "1.18.0"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
game-loop = "1.0.0"
base64 = "0.21.5"